<resources>
    <string name="app_name">MobFinalMenuPlusNavBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_main">Main</string>
    <string name="menu_history">History</string>
    <string name="menu_debts">Debts</string>
    <string name="menu_plan">Plan</string>
    <string name="menu_analytics">Analytics</string>

    <string name="home_second">Home Second</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_gallery_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_slideshow_second">Hello HomeSecondFragment. Arg: %1$s</string>
</resources>
