<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
                android:id="@+id/nav_main"
                android:icon="@drawable/ic_main"
                android:title="@string/menu_main"/>
        <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history"
                android:title="@string/menu_history"/>
        <item
                android:id="@+id/nav_debts"
                android:icon="@drawable/ic_debts"
                android:title="@string/menu_debts"/>
        <item
                android:id="@+id/nav_plan"
                android:icon="@drawable/ic_plan"
                android:title="@string/menu_plan"/>
        <item
                android:id="@+id/nav_analytics"
                android:icon="@drawable/ic_analytics"
                android:title="@string/menu_analytics"/>

    </group>
</menu>
