<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_main">

    <fragment
            android:id="@+id/nav_main"
            android:name="com.example.mobfinalmenuplusnavbar.ui.main.MainFragment"
            android:label="@string/menu_main"
            tools:layout="@layout/fragment_main"/>

    <fragment
            android:id="@+id/nav_history"
            android:name="com.example.mobfinalmenuplusnavbar.ui.history.HistoryFragment"
            android:label="@string/menu_history"
            tools:layout="@layout/fragment_history"/>

    <fragment
            android:id="@+id/nav_debts"
            android:name="com.example.mobfinalmenuplusnavbar.ui.debts.DebtsFragment"
            android:label="@string/menu_debts"
            tools:layout="@layout/fragment_debts"/>

    <fragment
            android:id="@+id/nav_plan"
            android:name="com.example.mobfinalmenuplusnavbar.ui.plan.PlanFragment"
            android:label="@string/menu_plan"
            tools:layout="@layout/fragment_plan"/>

    <fragment
            android:id="@+id/nav_analytics"
            android:name="com.example.mobfinalmenuplusnavbar.ui.analytics.AnalyticsFragment"
            android:label="@string/menu_analytics"
            tools:layout="@layout/fragment_analytics"/>
</navigation>